--- a/aml.SinglePageApplicationMVC.Web/aml.SinglePageApplicationMVC.Web/aml.SinglePageApplicationMVC.Web.csproj
+++ b/aml.SinglePageApplicationMVC.Web/aml.SinglePageApplicationMVC.Web/aml.SinglePageApplicationMVC.Web.csproj
@@ -112,7 +112,6 @@
     <Content Include="Scripts\angular.min.js" />
     <Content Include="Scripts\app.js" />
     <Content Include="Styles\style.css" />
-    <Content Include="Styles\style.min.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -120,6 +119,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\CustomerApiController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -130,8 +130,6 @@
     <Content Include="packages.config" />
     <Content Include="Scripts\angular.min.js.map" />
     <Content Include="Scripts\angular-route.min.js.map" />
-    <Content Include="Styles\style.css.map" />
-    <Content Include="Styles\style.less" />
     <Content Include="Views\Partials\_CreateCustomer.cshtml" />
     <Content Include="Views\Partials\_EditCustomer.cshtml" />
     <Content Include="Views\Partials\_ShowCustomers.cshtml" />
@@ -139,6 +137,9 @@
     <Content Include="Views\Customer\Create.cshtml" />
     <Content Include="Views\Customer\Edit.cshtml" />
     <Content Include="Views\Customer\Index.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Partials\Home\_Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
